# moltis-mesh

./: CHANGELOG.md  Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: credential_store.rs
crates/cli/: Cargo.toml
crates/config/src/: lib.rs  schema.rs  validate.rs
crates/consul/: Cargo.toml
crates/consul/src/: client.rs  config.rs  connect.rs  error.rs  intention.rs  lib.rs  registration.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: server.rs  state.rs  ws.rs
crates/gateway/src/methods/: mod.rs
crates/hc-vault/: Cargo.toml
crates/hc-vault/src/: backend.rs  client.rs  config.rs  error.rs  lib.rs  token.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: error.rs  identity.rs  lib.rs  mode.rs  mtls.rs  registry.rs  secrets.rs
crates/nomad/: Cargo.toml
crates/nomad/src/: alloc.rs  client.rs  config.rs  error.rs  job.rs  lib.rs  registry.rs
crates/protocol/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  nomad_sandbox.rs  sandbox.rs
crates/vault/: Cargo.toml
crates/vault/migrations/: 20260227000001_vault_secrets.sql
crates/vault/src/: backend.rs  lib.rs
crates/web/src/assets/js/: websocket.js
deploy/terraform/hashicorp-mesh/: README.md  main.tf  outputs.tf  variables.tf
docs/src/: SUMMARY.md  hashicorp-mesh.md
